--- a/console/package.json
+++ b/console/package.json
@@ -19,7 +19,7 @@
     "lodash": "4.17.4"
   },
   "devDependencies": {
-    "api-annotation": "1.0.0-alpha.11",
+    "api-annotation": "*",
     "intelli-espower-loader": "1.0.1",
     "istanbul": "0.4.5",
     "mocha": "3.4.2",
