--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "hc-boilerplate-beatle",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "a simple hc-bee boilerplate with beatle.",
-  "main": "",
+  "main": "app.js",
   "scripts": {
     "test": "make test",
     "eslint": "eslint --ext .js --ext .jsx --ignore-path .gitignore .",
