--- a/beatle/package.json
+++ b/beatle/package.json
@@ -26,9 +26,15 @@
   },
   "homepage": "https://github.com/node-honeycomb/hc-boilerplate#readme",
   "dependencies": {
+    "antd": "^3.7.1",
+    "beatle": "^1.1.11",
+    "beatle-dialog": "^2.0.1",
+    "classnames": "^2.2.6",
     "hc-bee": "^0.0.6",
     "honeypack": "0.1.12",
-    "lodash": "4.17.5"
+    "lodash": "4.17.5",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1"
   },
   "devDependencies": {
     "mocha": "^5.0.0",
