--- a/simple/package.json
+++ b/simple/package.json
@@ -23,18 +23,18 @@
   },
   "homepage": "https://github.com/node-honeycomb/hc-boilerplate#readme",
   "dependencies": {
-    "hc-bee": "^0.0.4",
+    "hc-bee": "^0.1.9",
     "lodash": "4.17.4"
   },
   "devDependencies": {
-    "mocha": "^5.0.0",
-    "api-annotation": "^1.0.0-alpha.2",
+    "api-annotation": "^1.0.2",
     "babel-eslint": "^8.0.3",
     "eslint": "^4.13.1",
     "eslint-config-aliyun": "^2.0.1",
     "eslint-plugin-react": "^7.5.1",
     "intelli-espower-loader": "^1.0.1",
     "istanbul": "^0.4.5",
+    "mocha": "^5.0.0",
     "power-assert": "^1.4.4",
     "supertest": "^3.0.0"
   }
