fix: set package license to empty

--- a/beatle/package.json
+++ b/beatle/package.json
@@ -20,7 +20,7 @@
     "honeycomb"
   ],
   "author": "honeycomb group",
-  "license": "MIT",
+  "license": "",
   "bugs": {
     "url": "https://github.com/node-honeycomb/hc-boilerplate/issues"
   },
